fix: edit cors